--- a/force-app/main/default/classes/CalculatorClass.cls
+++ b/force-app/main/default/classes/CalculatorClass.cls
@@ -1,5 +1,5 @@
 public with sharing class CalculatorClass {
-    public integer addTwoNumber(Integer num1, Integer num2) {
+    public integer addThreeNumber(Integer num1, Integer num2) {
         return num1+num2;
     }
 }
